Trying to fix a formatting thing on iphones

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -14,16 +14,3 @@ $grid-padding   : $gutter-width;
 $container-style: fluid;
 
 $show-grid-backgrounds  : true;
-
-
-.page {
-  // Establish our default 4-column grid container.
-  @include container;
-
-  // Create a media-query breakpoint at a min-width of 30em
-  // And use a larger 8-column grid within that media-query.
-  @include at-breakpoint(30em 8) {
-    // Establish our new 8-column container.
-    @include container;
-  }
-}
